--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
 </head>
 <body>
     <div>
-        <img src="./IMG_20231112_192946_171.jpg" alt="imagem do criador da página meus links, Cinthia Karolina.">
-        <h1>Cinthia Karolina</h1>
+        <img src="./Heloísa.jpg" alt="imagem da done do perfil">
+        <h1>Heloísa Nicoleti</h1>
         <strong>São Paulo, Brasil</strong>
 
-        <p>"Estudante de TI"</p>
+        <p>"Look, I didn´t want to be a Half-Blood"</p>
 
-        <a href="https://github.com/CinthiaKarolina" target="_blank">GitHub</a>
-        <a href="https://www.linkedin.com/in/cinthia-karolina-4bb5201a4/" target="_blank">LinkedIn</a>
-        <a href="https://br.pinterest.com/cinthiak2008/" target="_blank">Pinterest</a>
+        <a href="https://www.tiktok.com/@the.amazing.spider_girl?_t=8kWEfRn4Yi5&_r=1" target="_blank">TikTok</a>
+        <a href="https://www.instagram.com/wh0.lolaa?igsh=MXVrMHl2bWswOXp6cw==" target="_blank">Instagram</a>
     </div>
 </body>
 </html>
