--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div>
-        <img src="./Heloísa.jpg" alt="imagem da done do perfil">
+        <img src="./Heloísa.jpg" alt="imagem da done do perfil" width="90">
         <h1>Heloísa Nicoleti</h1>
         <strong>São Paulo, Brasil</strong>
 
